[package]
name = "spoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.0.0", features = ["macros"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "stream"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
audiotags = "0.5.0"
futures-util = "0.3.30"
regex = { version = "1.10.4", features = ["std"] }
